# virt-jitter-lab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_vmexit.cpp
docs/: architecture.mmd
include/vjl/: cpuid_detect.hpp  ipc_bench.hpp  jitter_sampler.hpp  report.hpp  stats.hpp  timer.hpp  vmexit_probe.hpp
src/: cpuid_detect.cpp  ipc_bench.cpp  jitter_sampler.cpp  main.cpp  report.cpp  stats.cpp  timer.cpp  vmexit_probe.cpp
tests/: test_ipc.cpp  test_jitter.cpp  test_stats.cpp  test_timer.cpp
